# Painter-s-Servant

./: .gitignore  .projectile  README.md  meson.build
src/: Settings.cpp  Settings.h  main.cpp  stdafx.h
src/board/: BoardTile.cpp  BoardTile.h
src/tiles/: BasicTile.cpp  BasicTile.h  SnakeTile.cpp  SnakeTile.h
src/window/: MainWindow.cpp  MainWindow.h  SnakeGame.cpp  SnakeGame.h  TickGame.cpp  TickGame.h  TickTackToeWindow.cpp  TickTackToeWindow.h  Window.cpp  Window.h
tests/: main.cpp
